# open-webui-extension-manager

./: MANIFEST.in  README.md  install.py  integrate_with_webui.py  pyproject.toml  requirements.txt  setup.py
docs/: creating_extensions.md  extension_api.md  extension_manager.md  file_structure.md
example_extension/: __init__.py  api.py  ui.py
example_extension/static/: example.js
example_extensions/hello_world/: __init__.py
example_extensions/weather_tool/: __init__.py
extension_framework/: __init__.py  base.py  decorators.py  hooks.py  utils.py
extension_manager/: __init__.py
extension_manager/backend/: __init__.py  api.py  models.py  registry.py
extension_manager/frontend/: ExtensionCard.svelte  ExtensionForm.svelte  ExtensionManager.svelte  index.js
extension_manager/static/: extension_manager.js
mcp_connector/: __init__.py  api.py  mcp_client.py
mcp_connector/static/: mcp_manager.js
open_webui_extensions/: __init__.py  cli.py  dev_server.py  install_openwebui.py  install_openwebui_ui.py  install_svelte_integration.py  plugin.py
open_webui_extensions/extension_system/: base.py  decorators.py  hooks.py  registry.py
open_webui_extensions/manager/: api.py
open_webui_extensions/manager/ui/: __init__.py
open_webui_extensions/manager/ui/templates/: admin-integration.js  manager.html
scripts/: install.sh
