[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-webui-extensions"
version = "0.1.0"
description = "Extension system for Open WebUI"
authors = [
    {name = "Open WebUI Team", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.95.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "aiofiles>=0.8.0",
    "click>=8.0.0",
]

[project.scripts]
openwebui-ext = "open_webui_extensions.cli:main"

[tool.setuptools]
package-data = {"open_webui_extensions.manager" = ["ui/templates/*", "static/*"]}
